--- a/1505.mw
+++ b/1505.mw
@@ -2,3 +2,97 @@
 ;september
 *[[18 september|18]] - [[Maria van Ongareye (1505-1558)]]
 [[Categorie:1500-1509]]
+
+[[af:1505]]
+[[am:1505 እ.ኤ.አ.]]
+[[an:1505]]
+[[ar:1505]]
+[[ast:1505]]
+[[az:1505]]
+[[be:1505]]
+[[be-x-old:1505]]
+[[bg:1505]]
+[[bh:१५०५]]
+[[bn:১৫০৫]]
+[[bpy:মারি ১৫০৫]]
+[[br:1505]]
+[[bs:1505]]
+[[ca:1505]]
+[[co:1505]]
+[[cs:1505]]
+[[cv:1505]]
+[[cy:1505]]
+[[da:1505]]
+[[de:1505]]
+[[el:1505]]
+[[en:1505]]
+[[eo:1505]]
+[[es:1505]]
+[[et:1505]]
+[[eu:1505]]
+[[fi:1505]]
+[[fr:1505]]
+[[fy:1505]]
+[[ga:1505]]
+[[gd:1505]]
+[[gl:1505]]
+[[he:1505]]
+[[hi:1505]]
+[[hr:1505.]]
+[[ht:1505 (almanak jilyen)]]
+[[hu:1505]]
+[[hy:1505]]
+[[ia:1505]]
+[[id:1505]]
+[[io:1505]]
+[[is:1505]]
+[[it:1505]]
+[[ja:1505年]]
+[[jv:1505]]
+[[ka:1505]]
+[[ko:1505년]]
+[[ksh:Joohr 1505]]
+[[la:1505]]
+[[lb:1505]]
+[[lt:XVI amžiaus 1-as dešimtmetis#1505]]
+[[map-bms:1505]]
+[[mi:1505]]
+[[mk:1505]]
+[[mr:इ.स. १५०५]]
+[[ms:1505]]
+[[nah:1505]]
+[[nap:1505]]
+[[nds:1505]]
+[[new:१५०५]]
+[[nl:1505]]
+[[nn:1505]]
+[[no:1505]]
+[[nov:1505]]
+[[nrm:1505]]
+[[oc:1505]]
+[[os:1505]]
+[[pi:१५०५]]
+[[pl:1505]]
+[[pt:1505]]
+[[ro:1505]]
+[[ru:1505 год]]
+[[sa:१५०५]]
+[[scn:1505]]
+[[simple:1505]]
+[[sk:1505]]
+[[sl:1505]]
+[[sq:1505]]
+[[sr:1505]]
+[[su:1505]]
+[[sv:1505]]
+[[sw:1505]]
+[[ta:1505]]
+[[th:พ.ศ. 2048]]
+[[tl:1505]]
+[[tr:1505]]
+[[tt:1505]]
+[[uk:1505]]
+[[uz:1505]]
+[[vec:1505]]
+[[zh:1505年]]
+[[zh-yue:1505年]]
