--- a/1507.mw
+++ b/1507.mw
@@ -3,3 +3,96 @@
 *[[29 oktober|29]] - [[Fernando Álvarez de Toledo]]
 
 [[Categorie: 1500-1509]]
+
+[[af:1507]]
+[[am:1507 እ.ኤ.አ.]]
+[[an:1507]]
+[[ar:1507]]
+[[ast:1507]]
+[[az:1507]]
+[[be:1507]]
+[[be-x-old:1507]]
+[[bg:1507]]
+[[bh:१५०७]]
+[[bn:১৫০৭]]
+[[bpy:মারি ১৫০৭]]
+[[br:1507]]
+[[bs:1507]]
+[[ca:1507]]
+[[co:1507]]
+[[cs:1507]]
+[[cv:1507]]
+[[cy:1507]]
+[[da:1507]]
+[[de:1507]]
+[[el:1507]]
+[[en:1507]]
+[[eo:1507]]
+[[es:1507]]
+[[et:1507]]
+[[eu:1507]]
+[[fi:1507]]
+[[fr:1507]]
+[[fy:1507]]
+[[ga:1507]]
+[[gd:1507]]
+[[gl:1507]]
+[[he:1507]]
+[[hi:1507]]
+[[hr:1507.]]
+[[ht:1507 (almanak jilyen)]]
+[[hu:1507]]
+[[hy:1507]]
+[[ia:1507]]
+[[id:1507]]
+[[io:1507]]
+[[is:1507]]
+[[it:1507]]
+[[ja:1507年]]
+[[jv:1507]]
+[[ka:1507]]
+[[ko:1507년]]
+[[ksh:Joohr 1507]]
+[[la:1507]]
+[[lb:1507]]
+[[lt:XVI amžiaus 1-as dešimtmetis#1507]]
+[[map-bms:1507]]
+[[mi:1507]]
+[[mk:1507]]
+[[mr:इ.स. १५०७]]
+[[ms:1507]]
+[[nah:1507]]
+[[nap:1507]]
+[[nds:1507]]
+[[new:१५०७]]
+[[nl:1507]]
+[[nn:1507]]
+[[no:1507]]
+[[nov:1507]]
+[[nrm:1507]]
+[[oc:1507]]
+[[os:1507]]
+[[pi:१५०७]]
+[[pl:1507]]
+[[pt:1507]]
+[[ro:1507]]
+[[ru:1507 год]]
+[[sa:१५०७]]
+[[scn:1507]]
+[[simple:1507]]
+[[sk:1507]]
+[[sl:1507]]
+[[sq:1507]]
+[[sr:1507]]
+[[su:1507]]
+[[sv:1507]]
+[[sw:1507]]
+[[th:พ.ศ. 2050]]
+[[tl:1507]]
+[[tr:1507]]
+[[tt:1507]]
+[[uk:1507]]
+[[uz:1507]]
+[[vec:1507]]
+[[zh:1507年]]
+[[zh-yue:1507年]]
