--- a/1522.mw
+++ b/1522.mw
@@ -3,3 +3,98 @@
 *[[28 december|28]] - [[Margaretha van Parma]]
 
 [[Categorie: 1520-1529]]
+
+[[af:1522]]
+[[am:1522 እ.ኤ.አ.]]
+[[an:1522]]
+[[ar:1522]]
+[[ast:1522]]
+[[az:1522]]
+[[be:1522]]
+[[be-x-old:1522]]
+[[bg:1522]]
+[[bh:१५२२]]
+[[bn:১৫২২]]
+[[bpy:মারি ১৫২২]]
+[[br:1522]]
+[[bs:1522]]
+[[ca:1522]]
+[[co:1522]]
+[[cs:1522]]
+[[cv:1522]]
+[[cy:1522]]
+[[da:1522]]
+[[de:1522]]
+[[el:1522]]
+[[en:1522]]
+[[eo:1522]]
+[[es:1522]]
+[[et:1522]]
+[[eu:1522]]
+[[fi:1522]]
+[[fr:1522]]
+[[fy:1522]]
+[[ga:1522]]
+[[gd:1522]]
+[[gl:1522]]
+[[he:1522]]
+[[hi:1522]]
+[[hr:1522.]]
+[[ht:1522 (almanak jilyen)]]
+[[hu:1522]]
+[[hy:1522]]
+[[ia:1522]]
+[[id:1522]]
+[[io:1522]]
+[[is:1522]]
+[[it:1522]]
+[[ja:1522年]]
+[[jv:1522]]
+[[ka:1522]]
+[[ko:1522년]]
+[[ksh:Joohr 1522]]
+[[la:1522]]
+[[lb:1522]]
+[[lmo:1522]]
+[[lt:XVI amžiaus 3-as dešimtmetis#1522]]
+[[map-bms:1522]]
+[[mi:1522]]
+[[mk:1522]]
+[[mr:इ.स. १५२२]]
+[[ms:1522]]
+[[nah:1522]]
+[[nap:1522]]
+[[nds:1522]]
+[[new:१५२२]]
+[[nl:1522]]
+[[nn:1522]]
+[[no:1522]]
+[[nov:1522]]
+[[nrm:1522]]
+[[oc:1522]]
+[[os:1522]]
+[[pi:१५२२]]
+[[pl:1522]]
+[[pt:1522]]
+[[ro:1522]]
+[[ru:1522 год]]
+[[sa:१५२२]]
+[[scn:1522]]
+[[simple:1522]]
+[[sk:1522]]
+[[sl:1522]]
+[[sq:1522]]
+[[sr:1522]]
+[[su:1522]]
+[[sv:1522]]
+[[sw:1522]]
+[[ta:1522]]
+[[th:พ.ศ. 2065]]
+[[tl:1522]]
+[[tr:1522]]
+[[tt:1522]]
+[[uk:1522]]
+[[uz:1522]]
+[[vec:1522]]
+[[zh:1522年]]
+[[zh-yue:1522年]]
