--- a/1528.mw
+++ b/1528.mw
@@ -4,3 +4,98 @@
 ;augustus
 *[[25 ogustus|25]] - [[Luis de Requesens y Zúñiga]]
 [[Categorie:1520-1529]]
+
+[[af:1528]]
+[[am:1528 እ.ኤ.አ.]]
+[[an:1528]]
+[[ar:1528]]
+[[ast:1528]]
+[[az:1528]]
+[[be:1528]]
+[[be-x-old:1528]]
+[[bg:1528]]
+[[bh:१५२८]]
+[[bn:১৫২৮]]
+[[bpy:মারি ১৫২৮]]
+[[br:1528]]
+[[bs:1528]]
+[[ca:1528]]
+[[co:1528]]
+[[cs:1528]]
+[[cv:1528]]
+[[cy:1528]]
+[[da:1528]]
+[[de:1528]]
+[[el:1528]]
+[[en:1528]]
+[[eo:1528]]
+[[es:1528]]
+[[et:1528]]
+[[eu:1528]]
+[[fi:1528]]
+[[fr:1528]]
+[[fy:1528]]
+[[ga:1528]]
+[[gd:1528]]
+[[gl:1528]]
+[[he:1528]]
+[[hi:1528]]
+[[hr:1528.]]
+[[ht:1528 (almanak jilyen)]]
+[[hu:1528]]
+[[hy:1528]]
+[[ia:1528]]
+[[id:1528]]
+[[io:1528]]
+[[is:1528]]
+[[it:1528]]
+[[ja:1528年]]
+[[jv:1528]]
+[[ka:1528]]
+[[ko:1528년]]
+[[ksh:Joohr 1528]]
+[[la:1528]]
+[[lb:1528]]
+[[lij:1528]]
+[[lt:XVI amžiaus 3-as dešimtmetis#1528]]
+[[map-bms:1528]]
+[[mi:1528]]
+[[mk:1528]]
+[[mr:इ.स. १५२८]]
+[[ms:1528]]
+[[nah:1528]]
+[[nap:1528]]
+[[nds:1528]]
+[[new:१५२८]]
+[[nl:1528]]
+[[nn:1528]]
+[[no:1528]]
+[[nov:1528]]
+[[nrm:1528]]
+[[oc:1528]]
+[[os:1528]]
+[[pi:१५२८]]
+[[pl:1528]]
+[[pt:1528]]
+[[ro:1528]]
+[[ru:1528 год]]
+[[sa:१५२८]]
+[[scn:1528]]
+[[simple:1528]]
+[[sk:1528]]
+[[sl:1528]]
+[[sq:1528]]
+[[sr:1528]]
+[[su:1528]]
+[[sv:1528]]
+[[sw:1528]]
+[[th:พ.ศ. 2071]]
+[[tl:1528]]
+[[tr:1528]]
+[[tt:1528]]
+[[uk:1528]]
+[[uz:1528]]
+[[vec:1528]]
+[[vo:1528]]
+[[zh:1528年]]
+[[zh-yue:1528年]]
