--- a/1530.mw
+++ b/1530.mw
@@ -2,3 +2,96 @@
 ;december
 *[[1 december|1]] - [[Margaretha van Oostnryk (1480-1530)]]
 [[Categorie: 1530-1539]]
+
+[[af:1530]]
+[[am:1530 እ.ኤ.አ.]]
+[[an:1530]]
+[[ar:1530]]
+[[ast:1530]]
+[[az:1530]]
+[[be:1530]]
+[[be-x-old:1530]]
+[[bg:1530]]
+[[bh:१५३०]]
+[[bn:১৫৩০]]
+[[bpy:মারি ১৫৩০]]
+[[br:1530]]
+[[bs:1530]]
+[[ca:1530]]
+[[co:1530]]
+[[cs:1530]]
+[[cv:1530]]
+[[cy:1530]]
+[[da:1530]]
+[[de:1530]]
+[[el:1530]]
+[[en:1530]]
+[[eo:1530]]
+[[es:1530]]
+[[et:1530]]
+[[eu:1530]]
+[[fi:1530]]
+[[fr:1530]]
+[[fy:1530]]
+[[ga:1530]]
+[[gd:1530]]
+[[gl:1530]]
+[[he:1530]]
+[[hi:1530]]
+[[hr:1530.]]
+[[ht:1530 (almanak jilyen)]]
+[[hu:1530]]
+[[hy:1530]]
+[[ia:1530]]
+[[id:1530]]
+[[io:1530]]
+[[is:1530]]
+[[it:1530]]
+[[ja:1530年]]
+[[jv:1530]]
+[[ka:1530]]
+[[ko:1530년]]
+[[ksh:Joohr 1530]]
+[[la:1530]]
+[[lb:1530]]
+[[lmo:1530]]
+[[lt:XVI amžiaus 3-as dešimtmetis#1530]]
+[[map-bms:1530]]
+[[mi:1530]]
+[[mk:1530]]
+[[mr:इ.स. १५३०]]
+[[ms:1530]]
+[[nah:1530]]
+[[nap:1530]]
+[[nds:1530]]
+[[new:१५३०]]
+[[nl:1530]]
+[[nn:1530]]
+[[no:1530]]
+[[nov:1530]]
+[[nrm:1530]]
+[[oc:1530]]
+[[os:1530]]
+[[pi:१५३०]]
+[[pl:1530]]
+[[pt:1530]]
+[[ro:1530]]
+[[ru:1530 год]]
+[[sa:१५३०]]
+[[scn:1530]]
+[[sk:1530]]
+[[sl:1530]]
+[[sq:1530]]
+[[sr:1530]]
+[[su:1530]]
+[[sv:1530]]
+[[sw:1530]]
+[[th:พ.ศ. 2073]]
+[[tl:1530]]
+[[tr:1530]]
+[[tt:1530]]
+[[uk:1530]]
+[[uz:1530]]
+[[vec:1530]]
+[[zh:1530年]]
+[[zh-yue:1530年]]
