--- a/1545.mw
+++ b/1545.mw
@@ -3,3 +3,95 @@
 *[[27 ogustus|27]] - [[Alexander Farnese]]
 
 [[Categorie: 1540-1549]]
+
+[[af:1545]]
+[[am:1545 እ.ኤ.አ.]]
+[[an:1545]]
+[[ar:1545]]
+[[ast:1545]]
+[[az:1545]]
+[[be:1545]]
+[[be-x-old:1545]]
+[[bg:1545]]
+[[bh:१५४५]]
+[[bn:১৫৪৫]]
+[[bpy:মারি ১৫৪৫]]
+[[br:1545]]
+[[bs:1545]]
+[[ca:1545]]
+[[co:1545]]
+[[cs:1545]]
+[[cv:1545]]
+[[cy:1545]]
+[[da:1545]]
+[[de:1545]]
+[[el:1545]]
+[[en:1545]]
+[[eo:1545]]
+[[es:1545]]
+[[et:1545]]
+[[eu:1545]]
+[[fi:1545]]
+[[fr:1545]]
+[[ga:1545]]
+[[gd:1545]]
+[[gl:1545]]
+[[he:1545]]
+[[hi:1545]]
+[[hr:1545.]]
+[[ht:1545 (almanak jilyen)]]
+[[hu:1545]]
+[[hy:1545]]
+[[ia:1545]]
+[[id:1545]]
+[[io:1545]]
+[[is:1545]]
+[[it:1545]]
+[[ja:1545年]]
+[[jv:1545]]
+[[ka:1545]]
+[[ko:1545년]]
+[[ksh:Joohr 1545]]
+[[la:1545]]
+[[lb:1545]]
+[[lmo:1545]]
+[[lt:XVI amžiaus 5-as dešimtmetis#1545]]
+[[map-bms:1545]]
+[[mi:1545]]
+[[mk:1545]]
+[[mr:इ.स. १५४५]]
+[[ms:1545]]
+[[nah:1545]]
+[[nap:1545]]
+[[nds:1545]]
+[[new:१५४५]]
+[[nl:1545]]
+[[nn:1545]]
+[[no:1545]]
+[[nov:1545]]
+[[nrm:1545]]
+[[oc:1545]]
+[[os:1545]]
+[[pi:१५४५]]
+[[pl:1545]]
+[[pt:1545]]
+[[ro:1545]]
+[[ru:1545 год]]
+[[sa:१५४५]]
+[[scn:1545]]
+[[sk:1545]]
+[[sl:1545]]
+[[sq:1545]]
+[[sr:1545]]
+[[su:1545]]
+[[sv:1545]]
+[[sw:1545]]
+[[th:พ.ศ. 2088]]
+[[tl:1545]]
+[[tr:1545]]
+[[tt:1545]]
+[[uk:1545]]
+[[uz:1545]]
+[[vec:1545]]
+[[zh:1545年]]
+[[zh-yue:1545年]]
