--- a/Amstel_Gold_Race.mw
+++ b/Amstel_Gold_Race.mw
@@ -18,6 +18,7 @@ De Amstel krygt dikwyls kritiek. Van de coureurs omdat er zoveel rounde puntn, w
 *[[2005]] – [[Danilo Di Luca]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
 *[[2006]] – [[Frank Schleck]] [[Ofbeeldienge:Flag of Luxembourg.svg|20px]]
 *[[2007]] – [[Stefan Schumacher]] [[Ofbeeldienge:Flag of Germany.svg|20px]]
+*[[2008]] – [[Damiano Cunego]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
 
 [[Categorie: Nederlandsche wielerkoerse]]
 
