--- a/1547.mw
+++ b/1547.mw
@@ -7,3 +7,96 @@
 *[[28 januoari|28]] - [[Hendrik VIII van Iengeland]]
 
 [[Categorie: 1540-1549]]
+
+[[af:1547]]
+[[am:1547 እ.ኤ.አ.]]
+[[an:1547]]
+[[ar:1547]]
+[[ast:1547]]
+[[az:1547]]
+[[be:1547]]
+[[be-x-old:1547]]
+[[bg:1547]]
+[[bh:१५४७]]
+[[bn:১৫৪৭]]
+[[bpy:মারি ১৫৪৭]]
+[[br:1547]]
+[[bs:1547]]
+[[ca:1547]]
+[[co:1547]]
+[[cs:1547]]
+[[cv:1547]]
+[[cy:1547]]
+[[da:1547]]
+[[de:1547]]
+[[el:1547]]
+[[en:1547]]
+[[eo:1547]]
+[[es:1547]]
+[[et:1547]]
+[[eu:1547]]
+[[fi:1547]]
+[[fr:1547]]
+[[ga:1547]]
+[[gd:1547]]
+[[gl:1547]]
+[[he:1547]]
+[[hi:1547]]
+[[hr:1547.]]
+[[ht:1547 (almanak jilyen)]]
+[[hu:1547]]
+[[hy:1547]]
+[[ia:1547]]
+[[id:1547]]
+[[io:1547]]
+[[is:1547]]
+[[it:1547]]
+[[ja:1547年]]
+[[jv:1547]]
+[[ka:1547]]
+[[ko:1547년]]
+[[ksh:Joohr 1547]]
+[[la:1547]]
+[[lb:1547]]
+[[lmo:1547]]
+[[lt:XVI amžiaus 5-as dešimtmetis#1547]]
+[[map-bms:1547]]
+[[mi:1547]]
+[[mk:1547]]
+[[mr:इ.स. १५४७]]
+[[ms:1547]]
+[[nah:1547]]
+[[nap:1547]]
+[[nds:1547]]
+[[new:१५४७]]
+[[nl:1547]]
+[[nn:1547]]
+[[no:1547]]
+[[nov:1547]]
+[[nrm:1547]]
+[[oc:1547]]
+[[os:1547]]
+[[pi:१५४७]]
+[[pl:1547]]
+[[pt:1547]]
+[[ro:1547]]
+[[ru:1547 год]]
+[[sa:१५४७]]
+[[scn:1547]]
+[[simple:1547]]
+[[sk:1547]]
+[[sl:1547]]
+[[sq:1547]]
+[[sr:1547]]
+[[su:1547]]
+[[sv:1547]]
+[[sw:1547]]
+[[th:พ.ศ. 2090]]
+[[tl:1547]]
+[[tr:1547]]
+[[tt:1547]]
+[[uk:1547]]
+[[uz:1547]]
+[[vec:1547]]
+[[zh:1547年]]
+[[zh-yue:1547年]]
