--- a/1553.mw
+++ b/1553.mw
@@ -3,3 +3,94 @@
 *[[15 juni|15]] - [[Ernst van Oostnryk]]
 
 [[Categorie: 1550-1559]]
+
+[[af:1553]]
+[[am:1553 እ.ኤ.አ.]]
+[[an:1553]]
+[[ar:1553]]
+[[ast:1553]]
+[[az:1553]]
+[[be:1553]]
+[[be-x-old:1553]]
+[[bg:1553]]
+[[bh:१५५३]]
+[[bn:১৫৫৩]]
+[[bpy:মারি ১৫৫৩]]
+[[br:1553]]
+[[bs:1553]]
+[[ca:1553]]
+[[co:1553]]
+[[cs:1553]]
+[[cv:1553]]
+[[cy:1553]]
+[[da:1553]]
+[[de:1553]]
+[[el:1553]]
+[[en:1553]]
+[[eo:1553]]
+[[es:1553]]
+[[et:1553]]
+[[eu:1553]]
+[[fi:1553]]
+[[fr:1553]]
+[[ga:1553]]
+[[gd:1553]]
+[[gl:1553]]
+[[he:1553]]
+[[hr:1553.]]
+[[ht:1553 (almanak jilyen)]]
+[[hu:1553]]
+[[hy:1553]]
+[[ia:1553]]
+[[id:1553]]
+[[io:1553]]
+[[is:1553]]
+[[it:1553]]
+[[ja:1553年]]
+[[jv:1553]]
+[[ka:1553]]
+[[ko:1553년]]
+[[ksh:Joohr 1553]]
+[[la:1553]]
+[[lb:1553]]
+[[lt:XVI amžiaus 6-as dešimtmetis#1553]]
+[[map-bms:1553]]
+[[mi:1553]]
+[[mk:1553]]
+[[mr:इ.स. १५५३]]
+[[ms:1553]]
+[[nah:1553]]
+[[nap:1553]]
+[[nds:1553]]
+[[new:१५५३]]
+[[nl:1553]]
+[[nn:1553]]
+[[no:1553]]
+[[nov:1553]]
+[[nrm:1553]]
+[[oc:1553]]
+[[os:1553]]
+[[pi:१५५३]]
+[[pl:1553]]
+[[pt:1553]]
+[[ro:1553]]
+[[ru:1553 год]]
+[[sa:१५५३]]
+[[scn:1553]]
+[[simple:1553]]
+[[sk:1553]]
+[[sl:1553]]
+[[sq:1553]]
+[[sr:1553]]
+[[su:1553]]
+[[sv:1553]]
+[[sw:1553]]
+[[th:พ.ศ. 2096]]
+[[tl:1553]]
+[[tr:1553]]
+[[tt:1553]]
+[[uk:1553]]
+[[uz:1553]]
+[[vec:1553]]
+[[zh:1553年]]
+[[zh-yue:1553年]]
