--- a/1559.mw
+++ b/1559.mw
@@ -3,3 +3,94 @@
 *[[15 november|15]] - [[Albrecht van Oostnryk]]
 
 [[Categorie: 1550-1559]]
+
+[[af:1559]]
+[[am:1559 እ.ኤ.አ.]]
+[[an:1559]]
+[[ar:1559]]
+[[ast:1559]]
+[[az:1559]]
+[[be:1559]]
+[[be-x-old:1559]]
+[[bg:1559]]
+[[bh:१५५९]]
+[[bn:১৫৫৯]]
+[[bpy:মারি ১৫৫৯]]
+[[br:1559]]
+[[bs:1559]]
+[[ca:1559]]
+[[co:1559]]
+[[cs:1559]]
+[[cv:1559]]
+[[cy:1559]]
+[[da:1559]]
+[[de:1559]]
+[[el:1559]]
+[[en:1559]]
+[[eo:1559]]
+[[es:1559]]
+[[et:1559]]
+[[eu:1559]]
+[[fi:1559]]
+[[fr:1559]]
+[[ga:1559]]
+[[gd:1559]]
+[[gl:1559]]
+[[he:1559]]
+[[hi:1559]]
+[[hr:1559.]]
+[[ht:1559 (almanak jilyen)]]
+[[hu:1559]]
+[[hy:1559]]
+[[ia:1559]]
+[[id:1559]]
+[[io:1559]]
+[[is:1559]]
+[[it:1559]]
+[[ja:1559年]]
+[[jv:1559]]
+[[ka:1559]]
+[[ko:1559년]]
+[[ksh:Joohr 1559]]
+[[la:1559]]
+[[lb:1559]]
+[[lt:XVI amžiaus 6-as dešimtmetis#1559]]
+[[map-bms:1559]]
+[[mi:1559]]
+[[mk:1559]]
+[[mr:इ.स. १५५९]]
+[[ms:1559]]
+[[nah:1559]]
+[[nap:1559]]
+[[nds:1559]]
+[[new:१५५९]]
+[[nl:1559]]
+[[nn:1559]]
+[[no:1559]]
+[[nov:1559]]
+[[nrm:1559]]
+[[oc:1559]]
+[[os:1559]]
+[[pi:१५५९]]
+[[pl:1559]]
+[[pt:1559]]
+[[ro:1559]]
+[[ru:1559 год]]
+[[sa:१५५९]]
+[[scn:1559]]
+[[simple:1559]]
+[[sk:1559]]
+[[sl:1559]]
+[[sq:1559]]
+[[sr:1559]]
+[[su:1559]]
+[[sv:1559]]
+[[sw:1559]]
+[[th:พ.ศ. 2102]]
+[[tl:1559]]
+[[tr:1559]]
+[[uk:1559]]
+[[uz:1559]]
+[[vec:1559]]
+[[zh:1559年]]
+[[zh-yue:1559年]]
