--- a/1560.mw
+++ b/1560.mw
@@ -3,3 +3,95 @@
 *[[18 september|18]] - [[Pedro Henriquez de Acevedo]]
 
 [[Categorie: 1560-1569]]
+
+[[af:1560]]
+[[am:1560 እ.ኤ.አ.]]
+[[an:1560]]
+[[ar:1560]]
+[[ast:1560]]
+[[az:1560]]
+[[be:1560]]
+[[be-x-old:1560]]
+[[bg:1560]]
+[[bh:१५६०]]
+[[bn:১৫৬০]]
+[[bpy:মারি ১৫৬০]]
+[[br:1560]]
+[[bs:1560]]
+[[ca:1560]]
+[[co:1560]]
+[[cs:1560]]
+[[cv:1560]]
+[[cy:1560]]
+[[da:1560]]
+[[de:1560]]
+[[el:1560]]
+[[en:1560]]
+[[eo:1560]]
+[[es:1560]]
+[[et:1560]]
+[[eu:1560]]
+[[fi:1560]]
+[[fr:1560]]
+[[ga:1560]]
+[[gd:1560]]
+[[gl:1560]]
+[[he:1560]]
+[[hi:1560]]
+[[hr:1560.]]
+[[ht:1560 (almanak jilyen)]]
+[[hu:1560]]
+[[hy:1560]]
+[[ia:1560]]
+[[id:1560]]
+[[io:1560]]
+[[is:1560]]
+[[it:1560]]
+[[ja:1560年]]
+[[jv:1560]]
+[[ka:1560]]
+[[ko:1560년]]
+[[ksh:Joohr 1560]]
+[[la:1560]]
+[[lb:1560]]
+[[lt:XVI amžiaus 6-as dešimtmetis#1560]]
+[[map-bms:1560]]
+[[mi:1560]]
+[[mk:1560]]
+[[mr:इ.स. १५६०]]
+[[ms:1560]]
+[[nah:1560]]
+[[nap:1560]]
+[[nds:1560]]
+[[new:१५६०]]
+[[nl:1560]]
+[[nn:1560]]
+[[no:1560]]
+[[nov:1560]]
+[[nrm:1560]]
+[[oc:1560]]
+[[os:1560]]
+[[pi:१५६०]]
+[[pl:1560]]
+[[pt:1560]]
+[[ro:1560]]
+[[ru:1560 год]]
+[[sa:१५६०]]
+[[scn:1560]]
+[[simple:1560]]
+[[sk:1560]]
+[[sl:1560]]
+[[sq:1560]]
+[[sr:1560]]
+[[su:1560]]
+[[sv:1560]]
+[[sw:1560]]
+[[th:พ.ศ. 2103]]
+[[tl:1560]]
+[[tr:1560]]
+[[tt:1560]]
+[[uk:1560]]
+[[uz:1560]]
+[[vec:1560]]
+[[zh:1560年]]
+[[zh-yue:1560年]]
