--- a/1562.mw
+++ b/1562.mw
@@ -3,3 +3,96 @@
 *[[7 december|7]] - [[Adriaan Willaert]]
 
 [[Categorie: 1560-1569]]
+
+[[af:1562]]
+[[am:1562 እ.ኤ.አ.]]
+[[an:1562]]
+[[ar:1562]]
+[[ast:1562]]
+[[az:1562]]
+[[be:1562]]
+[[be-x-old:1562]]
+[[bg:1562]]
+[[bh:१५६२]]
+[[bn:১৫৬২]]
+[[bpy:মারি ১৫৬২]]
+[[br:1562]]
+[[bs:1562]]
+[[ca:1562]]
+[[co:1562]]
+[[cs:1562]]
+[[cv:1562]]
+[[cy:1562]]
+[[da:1562]]
+[[de:1562]]
+[[el:1562]]
+[[en:1562]]
+[[eo:1562]]
+[[es:1562]]
+[[et:1562]]
+[[eu:1562]]
+[[fi:1562]]
+[[fr:1562]]
+[[ga:1562]]
+[[gd:1562]]
+[[gl:1562]]
+[[he:1562]]
+[[hi:1562]]
+[[hr:1562.]]
+[[ht:1562 (almanak jilyen)]]
+[[hu:1562]]
+[[hy:1562]]
+[[ia:1562]]
+[[id:1562]]
+[[io:1562]]
+[[is:1562]]
+[[it:1562]]
+[[ja:1562年]]
+[[jv:1562]]
+[[ka:1562]]
+[[ko:1562년]]
+[[ksh:Joohr 1562]]
+[[la:1562]]
+[[lb:1562]]
+[[lmo:1562]]
+[[lt:XVI amžiaus 7-as dešimtmetis#1562]]
+[[map-bms:1562]]
+[[mi:1562]]
+[[mk:1562]]
+[[mr:इ.स. १५६२]]
+[[ms:1562]]
+[[nah:1562]]
+[[nap:1562]]
+[[nds:1562]]
+[[new:१५६२]]
+[[nl:1562]]
+[[nn:1562]]
+[[no:1562]]
+[[nov:1562]]
+[[nrm:1562]]
+[[oc:1562]]
+[[os:1562]]
+[[pi:१५६२]]
+[[pl:1562]]
+[[pt:1562]]
+[[ro:1562]]
+[[ru:1562 год]]
+[[sa:१५६२]]
+[[scn:1562]]
+[[simple:1562]]
+[[sk:1562]]
+[[sl:1562]]
+[[sq:1562]]
+[[sr:1562]]
+[[su:1562]]
+[[sv:1562]]
+[[sw:1562]]
+[[th:พ.ศ. 2105]]
+[[tl:1562]]
+[[tr:1562]]
+[[tt:1562]]
+[[uk:1562]]
+[[uz:1562]]
+[[vec:1562]]
+[[zh:1562年]]
+[[zh-yue:1562年]]
