--- a/1576.mw
+++ b/1576.mw
@@ -5,3 +5,92 @@
 *[[12 oktober|12]] - [[Maximiliaan II]]
 
 [[Categorie: 1570-1579]]
+
+[[af:1576]]
+[[am:1576 እ.ኤ.አ.]]
+[[an:1576]]
+[[ar:1576]]
+[[ast:1576]]
+[[az:1576]]
+[[be:1576]]
+[[be-x-old:1576]]
+[[bg:1576]]
+[[bh:१५७६]]
+[[bn:১৫৭৬]]
+[[bpy:মারি ১৫৭৬]]
+[[br:1576]]
+[[bs:1576]]
+[[ca:1576]]
+[[co:1576]]
+[[cs:1576]]
+[[cv:1576]]
+[[cy:1576]]
+[[da:1576]]
+[[de:1576]]
+[[el:1576]]
+[[en:1576]]
+[[eo:1576]]
+[[es:1576]]
+[[et:1576]]
+[[eu:1576]]
+[[fi:1576]]
+[[fr:1576]]
+[[ga:1576]]
+[[gd:1576]]
+[[gl:1576]]
+[[he:1576]]
+[[hr:1576.]]
+[[ht:1576 (almanak jilyen)]]
+[[hu:1576]]
+[[hy:1576]]
+[[ia:1576]]
+[[id:1576]]
+[[io:1576]]
+[[is:1576]]
+[[it:1576]]
+[[ja:1576年]]
+[[jv:1576]]
+[[ka:1576]]
+[[ko:1576년]]
+[[ksh:Joohr 1576]]
+[[la:1576]]
+[[lb:1576]]
+[[lt:XVI amžiaus 8-as dešimtmetis#1576]]
+[[map-bms:1576]]
+[[mi:1576]]
+[[mk:1576]]
+[[mr:इ.स. १५७६]]
+[[ms:1576]]
+[[nah:1576]]
+[[nap:1576]]
+[[new:१५७६]]
+[[nl:1576]]
+[[nn:1576]]
+[[no:1576]]
+[[nov:1576]]
+[[nrm:1576]]
+[[oc:1576]]
+[[os:1576]]
+[[pi:१५७६]]
+[[pl:1576]]
+[[pt:1576]]
+[[ro:1576]]
+[[ru:1576 год]]
+[[sa:१५७६]]
+[[scn:1576]]
+[[sk:1576]]
+[[sl:1576]]
+[[sq:1576]]
+[[sr:1576]]
+[[su:1576]]
+[[sv:1576]]
+[[sw:1576]]
+[[th:พ.ศ. 2119]]
+[[tl:1576]]
+[[tr:1576]]
+[[tt:1576]]
+[[uk:1576]]
+[[uz:1576]]
+[[vec:1576]]
+[[zh:1576年]]
+[[zh-yue:1576年]]
