--- a/1578.mw
+++ b/1578.mw
@@ -7,3 +7,96 @@
 *[[1 oktober|1]] - [[Juan van Oostnryk]]
 
 [[Categorie: 1570-1579]]
+
+[[af:1578]]
+[[am:1578 እ.ኤ.አ.]]
+[[an:1578]]
+[[ar:1578]]
+[[ast:1578]]
+[[az:1578]]
+[[be:1578]]
+[[be-x-old:1578]]
+[[bg:1578]]
+[[bh:१५७८]]
+[[bn:১৫৭৮]]
+[[bpy:মারি ১৫৭৮]]
+[[br:1578]]
+[[bs:1578]]
+[[ca:1578]]
+[[co:1578]]
+[[cs:1578]]
+[[cv:1578]]
+[[cy:1578]]
+[[da:1578]]
+[[de:1578]]
+[[el:1578]]
+[[en:1578]]
+[[eo:1578]]
+[[es:1578]]
+[[et:1578]]
+[[eu:1578]]
+[[fi:1578]]
+[[fr:1578]]
+[[fy:1578]]
+[[ga:1578]]
+[[gd:1578]]
+[[gl:1578]]
+[[he:1578]]
+[[hi:1578]]
+[[hr:1578.]]
+[[ht:1578 (almanak jilyen)]]
+[[hu:1578]]
+[[hy:1578]]
+[[ia:1578]]
+[[id:1578]]
+[[io:1578]]
+[[is:1578]]
+[[it:1578]]
+[[ja:1578年]]
+[[jv:1578]]
+[[ka:1578]]
+[[ko:1578년]]
+[[ksh:Joohr 1578]]
+[[la:1578]]
+[[lb:1578]]
+[[lt:XVI amžiaus 8-as dešimtmetis#1578]]
+[[map-bms:1578]]
+[[mi:1578]]
+[[mk:1578]]
+[[mr:इ.स. १५७८]]
+[[ms:1578]]
+[[nah:1578]]
+[[nap:1578]]
+[[new:१५७८]]
+[[nl:1578]]
+[[nn:1578]]
+[[no:1578]]
+[[nov:1578]]
+[[nrm:1578]]
+[[oc:1578]]
+[[os:1578]]
+[[pam:1578]]
+[[pi:१५७८]]
+[[pl:1578]]
+[[pt:1578]]
+[[ro:1578]]
+[[ru:1578 год]]
+[[sa:१५७८]]
+[[scn:1578]]
+[[simple:1578]]
+[[sk:1578]]
+[[sl:1578]]
+[[sq:1578]]
+[[sr:1578]]
+[[su:1578]]
+[[sv:1578]]
+[[sw:1578]]
+[[th:พ.ศ. 2121]]
+[[tl:1578]]
+[[tr:1578]]
+[[tt:1578]]
+[[uk:1578]]
+[[uz:1578]]
+[[vec:1578]]
+[[zh:1578年]]
+[[zh-yue:1578年]]
