--- a/1579.mw
+++ b/1579.mw
@@ -3,3 +3,96 @@
 *[[23 januoari]]: [[Unie van Utrecht]]
 
 [[Categorie:16e eeuw]]
+
+[[af:1579]]
+[[am:1579 እ.ኤ.አ.]]
+[[an:1579]]
+[[ar:1579]]
+[[ast:1579]]
+[[az:1579]]
+[[be:1579]]
+[[be-x-old:1579]]
+[[bg:1579]]
+[[bh:१५७९]]
+[[bn:১৫৭৯]]
+[[bpy:মারি ১৫৭৯]]
+[[br:1579]]
+[[bs:1579]]
+[[ca:1579]]
+[[co:1579]]
+[[cs:1579]]
+[[cv:1579]]
+[[cy:1579]]
+[[da:1579]]
+[[de:1579]]
+[[el:1579]]
+[[en:1579]]
+[[eo:1579]]
+[[es:1579]]
+[[et:1579]]
+[[eu:1579]]
+[[fi:1579]]
+[[fr:1579]]
+[[fy:1579]]
+[[ga:1579]]
+[[gd:1579]]
+[[gl:1579]]
+[[he:1579]]
+[[hi:1579]]
+[[hr:1579.]]
+[[ht:1579 (almanak jilyen)]]
+[[hu:1579]]
+[[hy:1579]]
+[[ia:1579]]
+[[id:1579]]
+[[io:1579]]
+[[is:1579]]
+[[it:1579]]
+[[ja:1579年]]
+[[jv:1579]]
+[[ka:1579]]
+[[ko:1579년]]
+[[ksh:Joohr 1579]]
+[[la:1579]]
+[[lb:1579]]
+[[lmo:1579]]
+[[lt:XVI amžiaus 8-as dešimtmetis#1579]]
+[[map-bms:1579]]
+[[mi:1579]]
+[[mk:1579]]
+[[mr:इ.स. १५७९]]
+[[ms:1579]]
+[[nah:1579]]
+[[nap:1579]]
+[[new:१५७९]]
+[[nl:1579]]
+[[nn:1579]]
+[[no:1579]]
+[[nov:1579]]
+[[nrm:1579]]
+[[oc:1579]]
+[[os:1579]]
+[[pi:१५७९]]
+[[pl:1579]]
+[[pt:1579]]
+[[ro:1579]]
+[[ru:1579 год]]
+[[sa:१५७९]]
+[[scn:1579]]
+[[simple:1579]]
+[[sk:1579]]
+[[sl:1579]]
+[[sq:1579]]
+[[sr:1579]]
+[[su:1579]]
+[[sv:1579]]
+[[sw:1579]]
+[[th:พ.ศ. 2122]]
+[[tl:1579]]
+[[tr:1579]]
+[[tt:1579]]
+[[uk:1579]]
+[[uz:1579]]
+[[vec:1579]]
+[[zh:1579年]]
+[[zh-yue:1579年]]
