--- a/1580.mw
+++ b/1580.mw
@@ -2,3 +2,96 @@
 ;augustus
 *[[30 ogustus|30]] - [[Emanuel Filibert van Savoye]]
 [[Categorie: 1580-1589]]
+
+[[af:1580]]
+[[am:1580 እ.ኤ.አ.]]
+[[an:1580]]
+[[ar:1580]]
+[[ast:1580]]
+[[az:1580]]
+[[be:1580]]
+[[be-x-old:1580]]
+[[bg:1580]]
+[[bh:१५८०]]
+[[bn:১৫৮০]]
+[[bpy:মারি ১৫৮০]]
+[[br:1580]]
+[[bs:1580]]
+[[ca:1580]]
+[[co:1580]]
+[[cs:1580]]
+[[cv:1580]]
+[[cy:1580]]
+[[da:1580]]
+[[de:1580]]
+[[el:1580]]
+[[en:1580]]
+[[eo:1580]]
+[[es:1580]]
+[[et:1580]]
+[[eu:1580]]
+[[fi:1580]]
+[[fr:1580]]
+[[fy:1580]]
+[[ga:1580]]
+[[gd:1580]]
+[[gl:1580]]
+[[he:1580]]
+[[hi:1580]]
+[[hr:1580.]]
+[[ht:1580 (almanak jilyen)]]
+[[hu:1580]]
+[[hy:1580]]
+[[ia:1580]]
+[[id:1580]]
+[[io:1580]]
+[[is:1580]]
+[[it:1580]]
+[[ja:1580年]]
+[[jv:1580]]
+[[ka:1580]]
+[[ko:1580년]]
+[[ksh:Joohr 1580]]
+[[la:1580]]
+[[lb:1580]]
+[[lij:1580]]
+[[lt:XVI amžiaus 8-as dešimtmetis#1580]]
+[[map-bms:1580]]
+[[mi:1580]]
+[[mk:1580]]
+[[mr:इ.स. १५८०]]
+[[ms:1580]]
+[[nah:1580]]
+[[nap:1580]]
+[[new:१५८०]]
+[[nl:1580]]
+[[nn:1580]]
+[[no:1580]]
+[[nov:1580]]
+[[nrm:1580]]
+[[oc:1580]]
+[[os:1580]]
+[[pi:१५८०]]
+[[pl:1580]]
+[[pt:1580]]
+[[ro:1580]]
+[[ru:1580 год]]
+[[sa:१५८०]]
+[[scn:1580]]
+[[simple:1580]]
+[[sk:1580]]
+[[sl:1580]]
+[[sq:1580]]
+[[sr:1580]]
+[[su:1580]]
+[[sv:1580]]
+[[sw:1580]]
+[[th:พ.ศ. 2123]]
+[[tl:1580]]
+[[tr:1580]]
+[[tt:1580]]
+[[uk:1580]]
+[[uz:1580]]
+[[vec:1580]]
+[[zh:1580年]]
+[[zh-yue:1580年]]
