--- a/1581.mw
+++ b/1581.mw
@@ -2,3 +2,95 @@
 *[[26 juli]]: [[Plakkaat van Verlatinghe]]
 
 [[Categorie:16e eeuw]]
+
+[[af:1581]]
+[[am:1581 እ.ኤ.አ.]]
+[[an:1581]]
+[[ar:1581]]
+[[ast:1581]]
+[[az:1581]]
+[[be:1581]]
+[[be-x-old:1581]]
+[[bg:1581]]
+[[bh:१५८१]]
+[[bn:১৫৮১]]
+[[bpy:মারি ১৫৮১]]
+[[br:1581]]
+[[bs:1581]]
+[[ca:1581]]
+[[co:1581]]
+[[cs:1581]]
+[[cv:1581]]
+[[cy:1581]]
+[[da:1581]]
+[[de:1581]]
+[[el:1581]]
+[[en:1581]]
+[[eo:1581]]
+[[es:1581]]
+[[et:1581]]
+[[eu:1581]]
+[[fi:1581]]
+[[fr:1581]]
+[[ga:1581]]
+[[gd:1581]]
+[[gl:1581]]
+[[he:1581]]
+[[hi:1581]]
+[[hr:1581.]]
+[[ht:1581 (almanak jilyen)]]
+[[hu:1581]]
+[[hy:1581]]
+[[ia:1581]]
+[[id:1581]]
+[[io:1581]]
+[[is:1581]]
+[[it:1581]]
+[[ja:1581年]]
+[[jv:1581]]
+[[ka:1581]]
+[[ko:1581년]]
+[[ksh:Joohr 1581]]
+[[la:1581]]
+[[lb:1581]]
+[[ln:1581]]
+[[lt:XVI amžiaus 9-as dešimtmetis#1581]]
+[[map-bms:1581]]
+[[mi:1581]]
+[[mk:1581]]
+[[mr:इ.स. १५८१]]
+[[ms:1581]]
+[[nah:1581]]
+[[nap:1581]]
+[[new:१५८१]]
+[[nl:1581]]
+[[nn:1581]]
+[[no:1581]]
+[[nov:1581]]
+[[nrm:1581]]
+[[oc:1581]]
+[[os:1581]]
+[[pi:१५८१]]
+[[pl:1581]]
+[[pt:1581]]
+[[ro:1581]]
+[[ru:1581 год]]
+[[sa:१५८१]]
+[[scn:1581]]
+[[simple:1581]]
+[[sk:1581]]
+[[sl:1581]]
+[[sq:1581]]
+[[sr:1581]]
+[[su:1581]]
+[[sv:1581]]
+[[sw:1581]]
+[[th:พ.ศ. 2124]]
+[[tl:1581]]
+[[tr:1581]]
+[[tt:1581]]
+[[uk:1581]]
+[[uz:1581]]
+[[vec:1581]]
+[[zh:1581年]]
+[[zh-yue:1581年]]
