--- a/1582.mw
+++ b/1582.mw
@@ -3,3 +3,97 @@
 *[[11 december|11]] - [[Fernando Álvarez de Toledo]]
 
 [[Categorie: 1580-1589]]
+
+[[af:1582]]
+[[am:1582 እ.ኤ.አ.]]
+[[an:1582]]
+[[ar:1582]]
+[[ast:1582]]
+[[az:1582]]
+[[be:1582]]
+[[be-x-old:1582]]
+[[bg:1582]]
+[[bh:१५८२]]
+[[bn:১৫৮২]]
+[[bpy:মারি ১৫৮২]]
+[[br:1582]]
+[[bs:1582]]
+[[ca:1582]]
+[[co:1582]]
+[[cs:1582]]
+[[cv:1582]]
+[[cy:1582]]
+[[da:1582]]
+[[de:1582]]
+[[el:1582]]
+[[en:1582]]
+[[eo:1582]]
+[[es:1582]]
+[[et:1582]]
+[[eu:1582]]
+[[fi:1582]]
+[[fr:1582]]
+[[ga:1582]]
+[[gd:1582]]
+[[gl:1582]]
+[[he:1582]]
+[[hi:1582]]
+[[hr:1582.]]
+[[ht:1582 (almanak gregoryen)]]
+[[hu:1582]]
+[[hy:1582]]
+[[ia:1582]]
+[[id:1582]]
+[[io:1582]]
+[[is:1582]]
+[[it:1582]]
+[[ja:1582年]]
+[[jv:1582]]
+[[ka:1582]]
+[[ko:1582년]]
+[[ksh:Joohr 1582]]
+[[ku:1582]]
+[[la:1582]]
+[[lb:1582]]
+[[lmo:1582]]
+[[lt:XVI amžiaus 9-as dešimtmetis#1582]]
+[[map-bms:1582]]
+[[mi:1582]]
+[[mk:1582]]
+[[mr:इ.स. १५८२]]
+[[ms:1582]]
+[[nah:1582]]
+[[nap:1582]]
+[[nds:1582]]
+[[new:१५८२]]
+[[nl:1582]]
+[[nn:1582]]
+[[no:1582]]
+[[nov:1582]]
+[[nrm:1582]]
+[[oc:1582]]
+[[os:1582]]
+[[pi:१५८२]]
+[[pl:1582]]
+[[pt:1582]]
+[[ro:1582]]
+[[ru:1582 год]]
+[[sa:१५८२]]
+[[scn:1582]]
+[[simple:1582]]
+[[sk:1582]]
+[[sl:1582]]
+[[sq:1582]]
+[[sr:1582]]
+[[su:1582]]
+[[sv:1582]]
+[[sw:1582]]
+[[ta:1582]]
+[[th:พ.ศ. 2125]]
+[[tl:1582]]
+[[tr:1582]]
+[[uk:1582]]
+[[uz:1582]]
+[[vec:1582]]
+[[zh:1582年]]
+[[zh-yue:1582年]]
