--- a/1586.mw
+++ b/1586.mw
@@ -3,3 +3,93 @@
 *[[18 januoari|18]] - [[Margaretha van Parma]]
 
 [[Categorie: 1580-1589]]
+
+[[af:1586]]
+[[am:1586 እ.ኤ.አ.]]
+[[an:1586]]
+[[ar:1586]]
+[[ast:1586]]
+[[az:1586]]
+[[be:1586]]
+[[be-x-old:1586]]
+[[bg:1586]]
+[[bh:१५८६]]
+[[bn:১৫৮৬]]
+[[bpy:মারি ১৫৮৬]]
+[[br:1586]]
+[[bs:1586]]
+[[ca:1586]]
+[[co:1586]]
+[[cs:1586]]
+[[cv:1586]]
+[[cy:1586]]
+[[da:1586]]
+[[de:1586]]
+[[el:1586]]
+[[en:1586]]
+[[eo:1586]]
+[[es:1586]]
+[[et:1586]]
+[[eu:1586]]
+[[fi:1586]]
+[[fr:1586]]
+[[ga:1586]]
+[[gd:1586]]
+[[gl:1586]]
+[[he:1586]]
+[[hi:1586]]
+[[hr:1586.]]
+[[ht:1586 (almanak gregoryen)]]
+[[hu:1586]]
+[[hy:1586]]
+[[ia:1586]]
+[[id:1586]]
+[[io:1586]]
+[[is:1586]]
+[[it:1586]]
+[[ja:1586年]]
+[[jv:1586]]
+[[ka:1586]]
+[[ko:1586년]]
+[[ksh:Joohr 1586]]
+[[la:1586]]
+[[lb:1586]]
+[[lt:XVI amžiaus 9-as dešimtmetis#1586]]
+[[map-bms:1586]]
+[[mi:1586]]
+[[mk:1586]]
+[[mr:इ.स. १५८६]]
+[[ms:1586]]
+[[nah:1586]]
+[[nap:1586]]
+[[new:१५८६]]
+[[nl:1586]]
+[[nn:1586]]
+[[no:1586]]
+[[nov:1586]]
+[[nrm:1586]]
+[[oc:1586]]
+[[os:1586]]
+[[pi:१५८६]]
+[[pl:1586]]
+[[pt:1586]]
+[[ro:1586]]
+[[ru:1586 год]]
+[[sa:१५८६]]
+[[scn:1586]]
+[[sk:1586]]
+[[sl:1586]]
+[[sq:1586]]
+[[sr:1586]]
+[[su:1586]]
+[[sv:1586]]
+[[sw:1586]]
+[[th:พ.ศ. 2129]]
+[[tl:1586]]
+[[tr:1586]]
+[[tt:1586]]
+[[uk:1586]]
+[[uz:1586]]
+[[vec:1586]]
+[[zh:1586年]]
+[[zh-yue:1586年]]
