--- a/1587.mw
+++ b/1587.mw
@@ -3,3 +3,95 @@
 *[[17 november|17]] - [[Joost van den Vondel]]
 
 [[Categorie: 1580-1589]]
+
+[[af:1587]]
+[[am:1587 እ.ኤ.አ.]]
+[[an:1587]]
+[[ar:1587]]
+[[ast:1587]]
+[[az:1587]]
+[[be:1587]]
+[[be-x-old:1587]]
+[[bg:1587]]
+[[bh:१५८७]]
+[[bn:১৫৮৭]]
+[[bpy:মারি ১৫৮৭]]
+[[br:1587]]
+[[bs:1587]]
+[[ca:1587]]
+[[co:1587]]
+[[cs:1587]]
+[[cv:1587]]
+[[cy:1587]]
+[[da:1587]]
+[[de:1587]]
+[[el:1587]]
+[[en:1587]]
+[[eo:1587]]
+[[es:1587]]
+[[et:1587]]
+[[eu:1587]]
+[[fi:1587]]
+[[fr:1587]]
+[[ga:1587]]
+[[gd:1587]]
+[[gl:1587]]
+[[he:1587]]
+[[hi:1587]]
+[[hr:1587.]]
+[[ht:1587 (almanak gregoryen)]]
+[[hu:1587]]
+[[hy:1587]]
+[[ia:1587]]
+[[id:1587]]
+[[io:1587]]
+[[is:1587]]
+[[it:1587]]
+[[ja:1587年]]
+[[jv:1587]]
+[[ka:1587]]
+[[ko:1587년]]
+[[ksh:Joohr 1587]]
+[[la:1587]]
+[[lb:1587]]
+[[lt:XVI amžiaus 9-as dešimtmetis#1587]]
+[[map-bms:1587]]
+[[mi:1587]]
+[[mk:1587]]
+[[mr:इ.स. १५८७]]
+[[ms:1587]]
+[[nah:1587]]
+[[nap:1587]]
+[[nds:1587]]
+[[new:१५८७]]
+[[nl:1587]]
+[[nn:1587]]
+[[no:1587]]
+[[nov:1587]]
+[[nrm:1587]]
+[[oc:1587]]
+[[os:1587]]
+[[pi:१५८७]]
+[[pl:1587]]
+[[pt:1587]]
+[[ro:1587]]
+[[ru:1587 год]]
+[[sa:१५८७]]
+[[scn:1587]]
+[[sk:1587]]
+[[sl:1587]]
+[[sq:1587]]
+[[sr:1587]]
+[[su:1587]]
+[[sv:1587]]
+[[sw:1587]]
+[[th:พ.ศ. 2130]]
+[[tl:1587]]
+[[tr:1587]]
+[[tt:1587]]
+[[uk:1587]]
+[[uz:1587]]
+[[vec:1587]]
+[[wa:1587]]
+[[zh:1587年]]
+[[zh-yue:1587年]]
