--- a/1592.mw
+++ b/1592.mw
@@ -3,3 +3,94 @@
 *[[3 december|3]] - [[Alexander Farnese]]
 
 [[Categorie: 1590-1599]]
+
+[[af:1592]]
+[[am:1592 እ.ኤ.አ.]]
+[[an:1592]]
+[[ar:1592]]
+[[ast:1592]]
+[[az:1592]]
+[[be:1592]]
+[[be-x-old:1592]]
+[[bg:1592]]
+[[bh:१५९२]]
+[[bn:১৫৯২]]
+[[bpy:মারি ১৫৯২]]
+[[br:1592]]
+[[bs:1592]]
+[[ca:1592]]
+[[co:1592]]
+[[cs:1592]]
+[[cv:1592]]
+[[cy:1592]]
+[[da:1592]]
+[[de:1592]]
+[[el:1592]]
+[[en:1592]]
+[[eo:1592]]
+[[es:1592]]
+[[et:1592]]
+[[eu:1592]]
+[[fi:1592]]
+[[fr:1592]]
+[[ga:1592]]
+[[gd:1592]]
+[[gl:1592]]
+[[he:1592]]
+[[hi:1592]]
+[[hr:1592.]]
+[[ht:1592 (almanak gregoryen)]]
+[[hu:1592]]
+[[hy:1592]]
+[[ia:1592]]
+[[id:1592]]
+[[io:1592]]
+[[is:1592]]
+[[it:1592]]
+[[ja:1592年]]
+[[jv:1592]]
+[[ka:1592]]
+[[ko:1592년]]
+[[ksh:Joohr 1592]]
+[[la:1592]]
+[[lb:1592]]
+[[lt:XVI amžiaus 10-as dešimtmetis#1592]]
+[[map-bms:1592]]
+[[mi:1592]]
+[[mk:1592]]
+[[mr:इ.स. १५९२]]
+[[ms:1592]]
+[[nah:1592]]
+[[nap:1592]]
+[[new:१५९२]]
+[[nl:1592]]
+[[nn:1592]]
+[[no:1592]]
+[[nov:1592]]
+[[nrm:1592]]
+[[oc:1592]]
+[[os:1592]]
+[[pi:१५९२]]
+[[pl:1592]]
+[[pt:1592]]
+[[ro:1592]]
+[[ru:1592 год]]
+[[sa:१५९२]]
+[[scn:1592]]
+[[simple:1592]]
+[[sk:1592]]
+[[sl:1592]]
+[[sq:1592]]
+[[sr:1592]]
+[[su:1592]]
+[[sv:1592]]
+[[sw:1592]]
+[[th:พ.ศ. 2135]]
+[[tl:1592]]
+[[tr:1592]]
+[[tt:1592]]
+[[uk:1592]]
+[[uz:1592]]
+[[vec:1592]]
+[[zh:1592年]]
+[[zh-yue:1592年]]
