--- a/1595.mw
+++ b/1595.mw
@@ -3,3 +3,96 @@
 *[[20 februoari|20]] - [[Ernst van Oostnryk]]
 
 [[Categorie: 1590-1599]]
+
+[[af:1595]]
+[[am:1595 እ.ኤ.አ.]]
+[[an:1595]]
+[[ar:1595]]
+[[ast:1595]]
+[[az:1595]]
+[[be:1595]]
+[[be-x-old:1595]]
+[[bg:1595]]
+[[bh:१५९५]]
+[[bn:১৫৯৫]]
+[[bpy:মারি ১৫৯৫]]
+[[br:1595]]
+[[bs:1595]]
+[[ca:1595]]
+[[co:1595]]
+[[cs:1595]]
+[[cv:1595]]
+[[cy:1595]]
+[[da:1595]]
+[[de:1595]]
+[[el:1595]]
+[[en:1595]]
+[[eo:1595]]
+[[es:1595]]
+[[et:1595]]
+[[eu:1595]]
+[[fi:1595]]
+[[fr:1595]]
+[[ga:1595]]
+[[gd:1595]]
+[[gl:1595]]
+[[he:1595]]
+[[hi:1595]]
+[[hr:1595.]]
+[[ht:1595 (almanak gregoryen)]]
+[[hu:1595]]
+[[hy:1595]]
+[[ia:1595]]
+[[id:1595]]
+[[io:1595]]
+[[is:1595]]
+[[it:1595]]
+[[ja:1595年]]
+[[jv:1595]]
+[[ka:1595]]
+[[ko:1595년]]
+[[ksh:Joohr 1595]]
+[[la:1595]]
+[[lb:1595]]
+[[lt:XVI amžiaus 10-as dešimtmetis#1595]]
+[[map-bms:1595]]
+[[mi:1595]]
+[[mk:1595]]
+[[mr:इ.स. १५९५]]
+[[ms:1595]]
+[[nah:1595]]
+[[nap:1595]]
+[[nds:1595]]
+[[new:१५९५]]
+[[nl:1595]]
+[[nn:1595]]
+[[no:1595]]
+[[nov:1595]]
+[[nrm:1595]]
+[[oc:1595]]
+[[os:1595]]
+[[pi:१५९५]]
+[[pl:1595]]
+[[pt:1595]]
+[[ro:1595]]
+[[ru:1595 год]]
+[[sa:१५९५]]
+[[scn:1595]]
+[[sh:1595]]
+[[simple:1595]]
+[[sk:1595]]
+[[sl:1595]]
+[[sq:1595]]
+[[sr:1595]]
+[[su:1595]]
+[[sv:1595]]
+[[sw:1595]]
+[[th:พ.ศ. 2138]]
+[[tl:1595]]
+[[tr:1595]]
+[[tt:1595]]
+[[uk:1595]]
+[[uz:1595]]
+[[vec:1595]]
+[[zh:1595年]]
+[[zh-yue:1595年]]
