--- a/1605.mw
+++ b/1605.mw
@@ -3,3 +3,96 @@
 *[[8 april|8]] - [[Filips IV van Spanje]]
 
 [[Categorie: 1600-1609]]
+
+[[af:1605]]
+[[am:1605 እ.ኤ.አ.]]
+[[an:1605]]
+[[ar:1605]]
+[[ast:1605]]
+[[az:1605]]
+[[be:1605]]
+[[be-x-old:1605]]
+[[bg:1605]]
+[[bh:१६०५]]
+[[bn:১৬০৫]]
+[[bpy:মারি ১৬০৫]]
+[[br:1605]]
+[[bs:1605]]
+[[ca:1605]]
+[[co:1605]]
+[[cs:1605]]
+[[cv:1605]]
+[[cy:1605]]
+[[da:1605]]
+[[de:1605]]
+[[el:1605]]
+[[en:1605]]
+[[eo:1605]]
+[[es:1605]]
+[[et:1605]]
+[[eu:1605]]
+[[fi:1605]]
+[[fr:1605]]
+[[ga:1605]]
+[[gd:1605]]
+[[gl:1605]]
+[[he:1605]]
+[[hi:1605]]
+[[hr:1605.]]
+[[ht:1605 (almanak gregoryen)]]
+[[hu:1605]]
+[[hy:1605]]
+[[ia:1605]]
+[[id:1605]]
+[[io:1605]]
+[[is:1605]]
+[[it:1605]]
+[[ja:1605年]]
+[[jv:1605]]
+[[ka:1605]]
+[[kn:೧೬೦೫]]
+[[ko:1605년]]
+[[ksh:Joohr 1605]]
+[[la:1605]]
+[[lb:1605]]
+[[lt:XVII amžiaus 1-as dešimtmetis#1605]]
+[[map-bms:1605]]
+[[mi:1605]]
+[[mk:1605]]
+[[mr:इ.स. १६०५]]
+[[ms:1605]]
+[[nah:1605]]
+[[nap:1605]]
+[[nds:1605]]
+[[new:१६०५]]
+[[nl:1605]]
+[[nn:1605]]
+[[no:1605]]
+[[nov:1605]]
+[[nrm:1605]]
+[[oc:1605]]
+[[os:1605]]
+[[pi:१६०५]]
+[[pl:1605]]
+[[pt:1605]]
+[[ro:1605]]
+[[ru:1605 год]]
+[[sa:१६०५]]
+[[scn:1605]]
+[[simple:1605]]
+[[sk:1605]]
+[[sl:1605]]
+[[sq:1605]]
+[[sr:1605]]
+[[su:1605]]
+[[sv:1605]]
+[[sw:1605]]
+[[ta:1605]]
+[[th:พ.ศ. 2148]]
+[[tl:1605]]
+[[tr:1605]]
+[[uk:1605]]
+[[uz:1605]]
+[[vec:1605]]
+[[zh:1605年]]
+[[zh-yue:1605年]]
