--- a/1610.mw
+++ b/1610.mw
@@ -3,3 +3,96 @@
 *[[22 juli|22]] - [[Pedro Henriquez de Acevedo]]
 
 [[Categorie: 1610-1619]]
+
+[[af:1610]]
+[[am:1610 እ.ኤ.አ.]]
+[[an:1610]]
+[[ar:1610]]
+[[ast:1610]]
+[[az:1610]]
+[[be:1610]]
+[[be-x-old:1610]]
+[[bg:1610]]
+[[bh:१६१०]]
+[[bn:১৬১০]]
+[[bpy:মারি ১৬১০]]
+[[br:1610]]
+[[bs:1610]]
+[[ca:1610]]
+[[co:1610]]
+[[cs:1610]]
+[[cv:1610]]
+[[cy:1610]]
+[[da:1610]]
+[[de:1610]]
+[[el:1610]]
+[[en:1610]]
+[[eo:1610]]
+[[es:1610]]
+[[et:1610]]
+[[eu:1610]]
+[[fi:1610]]
+[[fr:1610]]
+[[ga:1610]]
+[[gd:1610]]
+[[gl:1610]]
+[[he:1610]]
+[[hi:1610]]
+[[hr:1610.]]
+[[ht:1610 (almanak gregoryen)]]
+[[hu:1610]]
+[[hy:1610]]
+[[ia:1610]]
+[[id:1610]]
+[[io:1610]]
+[[is:1610]]
+[[it:1610]]
+[[ja:1610年]]
+[[jv:1610]]
+[[ka:1610]]
+[[ko:1610년]]
+[[ksh:Joohr 1610]]
+[[la:1610]]
+[[lb:1610]]
+[[lt:XVII amžiaus 1-as dešimtmetis#1610]]
+[[map-bms:1610]]
+[[mi:1610]]
+[[mk:1610]]
+[[mr:इ.स. १६१०]]
+[[ms:1610]]
+[[nah:1610]]
+[[nap:1610]]
+[[nds:1610]]
+[[new:१६१०]]
+[[nl:1610]]
+[[nn:1610]]
+[[no:1610]]
+[[nov:1610]]
+[[nrm:1610]]
+[[oc:1610]]
+[[os:1610]]
+[[pi:१६१०]]
+[[pl:1610]]
+[[pt:1610]]
+[[ro:1610]]
+[[ru:1610 год]]
+[[sa:१६१०]]
+[[scn:1610]]
+[[simple:1610]]
+[[sk:1610]]
+[[sl:1610]]
+[[sq:1610]]
+[[sr:1610]]
+[[su:1610]]
+[[sv:1610]]
+[[sw:1610]]
+[[ta:1610]]
+[[th:พ.ศ. 2153]]
+[[tl:1610]]
+[[tr:1610]]
+[[tt:1610]]
+[[uk:1610]]
+[[uz:1610]]
+[[vec:1610]]
+[[zh:1610年]]
+[[zh-yue:1610年]]
