--- a/1621.mw
+++ b/1621.mw
@@ -6,3 +6,96 @@
 *[[13 juli|13]] - [[Albrecht van Oostnryk]]
 
 [[Categorie: 1620-1629]]
+
+[[af:1621]]
+[[am:1621 እ.ኤ.አ.]]
+[[an:1621]]
+[[ar:1621]]
+[[ast:1621]]
+[[az:1621]]
+[[be:1621]]
+[[be-x-old:1621]]
+[[bg:1621]]
+[[bh:१६२१]]
+[[bn:১৬২১]]
+[[bpy:মারি ১৬২১]]
+[[br:1621]]
+[[bs:1621]]
+[[ca:1621]]
+[[co:1621]]
+[[cs:1621]]
+[[cv:1621]]
+[[cy:1621]]
+[[da:1621]]
+[[de:1621]]
+[[el:1621]]
+[[en:1621]]
+[[eo:1621]]
+[[es:1621]]
+[[et:1621]]
+[[eu:1621]]
+[[fi:1621]]
+[[fr:1621]]
+[[ga:1621]]
+[[gd:1621]]
+[[gl:1621]]
+[[he:1621]]
+[[hi:1621]]
+[[hr:1621.]]
+[[ht:1621 (almanak gregoryen)]]
+[[hu:1621]]
+[[hy:1621]]
+[[ia:1621]]
+[[id:1621]]
+[[io:1621]]
+[[is:1621]]
+[[it:1621]]
+[[ja:1621年]]
+[[jv:1621]]
+[[ka:1621]]
+[[ko:1621년]]
+[[ksh:Joohr 1621]]
+[[la:1621]]
+[[lb:1621]]
+[[lij:1621]]
+[[lt:XVII amžiaus 3-as dešimtmetis#1621]]
+[[map-bms:1621]]
+[[mi:1621]]
+[[mk:1621]]
+[[mr:इ.स. १६२१]]
+[[ms:1621]]
+[[nah:1621]]
+[[nap:1621]]
+[[nds:1621]]
+[[new:१६२१]]
+[[nl:1621]]
+[[nn:1621]]
+[[no:1621]]
+[[nov:1621]]
+[[nrm:1621]]
+[[oc:1621]]
+[[os:1621]]
+[[pi:१६२१]]
+[[pl:1621]]
+[[pt:1621]]
+[[ro:1621]]
+[[ru:1621 год]]
+[[sa:१६२१]]
+[[scn:1621]]
+[[simple:1621]]
+[[sk:1621]]
+[[sl:1621]]
+[[sq:1621]]
+[[sr:1621]]
+[[su:1621]]
+[[sv:1621]]
+[[sw:1621]]
+[[th:พ.ศ. 2164]]
+[[tl:1621]]
+[[tr:1621]]
+[[tt:1621]]
+[[uk:1621]]
+[[uz:1621]]
+[[vec:1621]]
+[[zh:1621年]]
+[[zh-yue:1621年]]
