--- a/1629.mw
+++ b/1629.mw
@@ -3,3 +3,94 @@
 *[[7 april|7]] - [[Juan II van Oostnryk]]
 
 [[Categorie: 1620-1629]]
+
+[[af:1629]]
+[[am:1629 እ.ኤ.አ.]]
+[[an:1629]]
+[[ar:1629]]
+[[ast:1629]]
+[[az:1629]]
+[[be:1629]]
+[[be-x-old:1629]]
+[[bg:1629]]
+[[bh:१६२९]]
+[[bn:১৬২৯]]
+[[bpy:মারি ১৬২৯]]
+[[br:1629]]
+[[bs:1629]]
+[[ca:1629]]
+[[co:1629]]
+[[cs:1629]]
+[[cv:1629]]
+[[cy:1629]]
+[[da:1629]]
+[[de:1629]]
+[[el:1629]]
+[[en:1629]]
+[[eo:1629]]
+[[es:1629]]
+[[et:1629]]
+[[eu:1629]]
+[[fi:1629]]
+[[fr:1629]]
+[[ga:1629]]
+[[gd:1629]]
+[[gl:1629]]
+[[he:1629]]
+[[hi:1629]]
+[[hr:1629.]]
+[[ht:1629 (almanak gregoryen)]]
+[[hu:1629]]
+[[hy:1629]]
+[[ia:1629]]
+[[id:1629]]
+[[io:1629]]
+[[is:1629]]
+[[it:1629]]
+[[ja:1629年]]
+[[jv:1629]]
+[[ka:1629]]
+[[ko:1629년]]
+[[ksh:Joohr 1629]]
+[[la:1629]]
+[[lb:1629]]
+[[lt:XVII amžiaus 3-as dešimtmetis#1629]]
+[[map-bms:1629]]
+[[mi:1629]]
+[[mk:1629]]
+[[mr:इ.स. १६२९]]
+[[ms:1629]]
+[[nah:1629]]
+[[nap:1629]]
+[[nds:1629]]
+[[new:१६२९]]
+[[nl:1629]]
+[[nn:1629]]
+[[no:1629]]
+[[nov:1629]]
+[[nrm:1629]]
+[[oc:1629]]
+[[os:1629]]
+[[pi:१६२९]]
+[[pl:1629]]
+[[pt:1629]]
+[[ro:1629]]
+[[ru:1629 год]]
+[[sa:१६२९]]
+[[scn:1629]]
+[[sk:1629]]
+[[sl:1629]]
+[[sq:1629]]
+[[sr:1629]]
+[[su:1629]]
+[[sv:1629]]
+[[sw:1629]]
+[[th:พ.ศ. 2172]]
+[[tl:1629]]
+[[tr:1629]]
+[[tt:1629]]
+[[uk:1629]]
+[[uz:1629]]
+[[vec:1629]]
+[[zh:1629年]]
+[[zh-yue:1629年]]
