--- a/1630.mw
+++ b/1630.mw
@@ -3,3 +3,96 @@
 *[[17 ogustus|17]] - [[Lodewyk Maekeblyde]]
 
 [[Categorie: 1630-1639]]
+
+[[af:1630]]
+[[am:1630 እ.ኤ.አ.]]
+[[an:1630]]
+[[ar:1630]]
+[[ast:1630]]
+[[az:1630]]
+[[be:1630]]
+[[be-x-old:1630]]
+[[bg:1630]]
+[[bh:१६३०]]
+[[bn:১৬৩০]]
+[[bpy:মারি ১৬৩০]]
+[[br:1630]]
+[[bs:1630]]
+[[ca:1630]]
+[[co:1630]]
+[[cs:1630]]
+[[cv:1630]]
+[[cy:1630]]
+[[da:1630]]
+[[de:1630]]
+[[el:1630]]
+[[en:1630]]
+[[eo:1630]]
+[[es:1630]]
+[[et:1630]]
+[[eu:1630]]
+[[fi:1630]]
+[[fr:1630]]
+[[ga:1630]]
+[[gd:1630]]
+[[gl:1630]]
+[[he:1630]]
+[[hi:1630]]
+[[hr:1630.]]
+[[ht:1630 (almanak gregoryen)]]
+[[hu:1630]]
+[[hy:1630]]
+[[ia:1630]]
+[[id:1630]]
+[[io:1630]]
+[[is:1630]]
+[[it:1630]]
+[[ja:1630年]]
+[[jv:1630]]
+[[ka:1630]]
+[[ko:1630년]]
+[[ksh:Joohr 1630]]
+[[ku:1630]]
+[[la:1630]]
+[[lb:1630]]
+[[lt:XVII amžiaus 3-as dešimtmetis#1630]]
+[[map-bms:1630]]
+[[mi:1630]]
+[[mk:1630]]
+[[mr:इ.स. १६३०]]
+[[ms:1630]]
+[[nah:1630]]
+[[nap:1630]]
+[[nds:1630]]
+[[new:१६३०]]
+[[nl:1630]]
+[[nn:1630]]
+[[no:1630]]
+[[nov:1630]]
+[[nrm:1630]]
+[[oc:1630]]
+[[os:1630]]
+[[pi:१६३०]]
+[[pl:1630]]
+[[pt:1630]]
+[[ro:1630]]
+[[ru:1630 год]]
+[[sa:१६३०]]
+[[scn:1630]]
+[[simple:1630]]
+[[sk:1630]]
+[[sl:1630]]
+[[sq:1630]]
+[[sr:1630]]
+[[su:1630]]
+[[sv:1630]]
+[[sw:1630]]
+[[th:พ.ศ. 2173]]
+[[tl:1630]]
+[[tr:1630]]
+[[tt:1630]]
+[[uk:1630]]
+[[uz:1630]]
+[[vec:1630]]
+[[zh:1630年]]
+[[zh-yue:1630年]]
