--- a/België.mw
+++ b/België.mw
@@ -23,7 +23,7 @@ Belgie is over 't olgemeen styf plat - voerol in Vloandern. In 't zuudn, in de W
 *[[Ambiorix]], en [[Oude Belgn|Oudn Belg]] die teegn de [[Romeinn]] vocht
 *[[Leo Baekeland]], uutvinder van bakeliet
 *[[Peter Benoit]], componist
-*[[Raymound Ceulemans]], [[biljart]]er
+*[[Raymond Ceulemans]], [[biljart]]er
 *[[Jacques Brel]], zanger
 *[[Breugel|Pieter Breugel]], schilder
 *[[Conscience|Hendrik Conscience]], schryver van De Leeuw van Vlaanderen
