--- a/1638.mw
+++ b/1638.mw
@@ -3,3 +3,95 @@
 *[[5 september|5]] - [[Lodewyk XIV]]
 
 [[Categorie: 1630-1639]]
+
+[[af:1638]]
+[[am:1638 እ.ኤ.አ.]]
+[[an:1638]]
+[[ar:1638]]
+[[ast:1638]]
+[[az:1638]]
+[[be:1638]]
+[[be-x-old:1638]]
+[[bg:1638]]
+[[bh:१६३८]]
+[[bn:১৬৩৮]]
+[[bpy:মারি ১৬৩৮]]
+[[br:1638]]
+[[bs:1638]]
+[[ca:1638]]
+[[co:1638]]
+[[cs:1638]]
+[[cv:1638]]
+[[cy:1638]]
+[[da:1638]]
+[[de:1638]]
+[[el:1638]]
+[[en:1638]]
+[[eo:1638]]
+[[es:1638]]
+[[et:1638]]
+[[eu:1638]]
+[[fi:1638]]
+[[fr:1638]]
+[[ga:1638]]
+[[gd:1638]]
+[[gl:1638]]
+[[he:1638]]
+[[hi:1638]]
+[[hr:1638.]]
+[[ht:1638 (almanak gregoryen)]]
+[[hu:1638]]
+[[hy:1638]]
+[[ia:1638]]
+[[id:1638]]
+[[io:1638]]
+[[is:1638]]
+[[it:1638]]
+[[ja:1638年]]
+[[jv:1638]]
+[[ka:1638]]
+[[ko:1638년]]
+[[ksh:Joohr 1638]]
+[[la:1638]]
+[[lb:1638]]
+[[lt:XVII amžiaus 4-as dešimtmetis#1638]]
+[[map-bms:1638]]
+[[mi:1638]]
+[[mk:1638]]
+[[mr:इ.स. १६३८]]
+[[ms:1638]]
+[[nah:1638]]
+[[nap:1638]]
+[[nds:1638]]
+[[new:१६३८]]
+[[nl:1638]]
+[[nn:1638]]
+[[no:1638]]
+[[nov:1638]]
+[[nrm:1638]]
+[[oc:1638]]
+[[os:1638]]
+[[pi:१६३८]]
+[[pl:1638]]
+[[pt:1638]]
+[[ro:1638]]
+[[ru:1638 год]]
+[[sa:१६३८]]
+[[scn:1638]]
+[[simple:1638]]
+[[sk:1638]]
+[[sl:1638]]
+[[sq:1638]]
+[[sr:1638]]
+[[su:1638]]
+[[sv:1638]]
+[[sw:1638]]
+[[th:พ.ศ. 2181]]
+[[tl:1638]]
+[[tr:1638]]
+[[tt:1638]]
+[[uk:1638]]
+[[uz:1638]]
+[[vec:1638]]
+[[zh:1638年]]
+[[zh-yue:1638年]]
